--- a/Projekti/styles.css
+++ b/Projekti/styles.css
@@ -1,5 +1,5 @@
 body {
- background-color: #050505;
+ background-color: #06cdeb;
  margin: 8%;
  font-family: Georgia, 'Times New Roman', Times, serif
 }
@@ -12,7 +12,7 @@ body {
 
 @media screen and (min-width: 940px) {
  body {
-   background-image: url(kahvipapu.jpg);
+   background-image: url();
  }
 }
 
