--- a/Projekti/styles.css
+++ b/Projekti/styles.css
@@ -1,5 +1,5 @@
 body {
- background-color: #06cdeb;
+ background-color: #a244bf;
  margin: 8%;
  font-family: Georgia, 'Times New Roman', Times, serif
 }
@@ -16,22 +16,34 @@ body {
   }
 }
    
-@media screen and (min-width: 940px) {
-  layout {
-  display: grid;
-  grid-template-rows: 3em 20px [main-start] 150px auto 5em [main-end];
-  margin-left: 5%;
-  margin-right: 5%;
-    display: grid;
-  grid-template-rows: 3em 20px [main-start] 150px 300px 5em [main-end];
-  grid-template-columns: [main-start] 1fr [main-end] repeat(3, 20px 150px);
-  }
+nav {
+  padding: -10px -1px;
+  text-align: center;
+  border-radius: 10em;
+  border-bottom: 10px solid rgb(249, 246, 248) ;
+  padding: 0em 0em;
+  margin: 0em; 
 }
-   
-.navi {
- text-transform: uppercase;
+
+nav li {
+  display: inline-block;
+  margin-right: 50px;
 }
-   
+
+nav ul li a {
+  display: block;
+  border: 0px solid;
+  border-radius: 10em;
+  padding: .20em .13em;
+  margin: .30em;
+}   
+
+nav a:hover {
+  border-color: #fcf9f9;
+  border: 3px solid #fcf9f9;
+  padding: 0.5em;
+}
+  
 h1  {
   text-align: left;
   color: #fcf9f9;
@@ -39,17 +51,7 @@ h1  {
   font-family: inherit;
   font-weight: bolder;
   text-shadow: .1em .1em .1em rgb(162, 68, 191) ;
-  border-bottom: 10px solid rgb(249, 246, 248) ; 
-}
-
-h1 a {
-  text-align: left;
-  color: #fcf9f9;
-  font-size: 2.5cm;
-  font-family: inherit;
-  font-weight: bolder;
-  text-shadow: .1em .1em .1em rgb(162, 68, 191) ;
-  border-bottom: 10px solid rgb(249, 246, 248) ; 
+  
 }
    
 h2  {
@@ -65,13 +67,6 @@ h3  {
 h4  {
   color: #fcf9f9;
   font-size: 2em;
-}
-   
-h4 a {
-  color: #fcf9f9;
-  font-size: 1em;
-  background-color: #a244bf;
-  text-shadow: .1em .1em .1em rgb(162, 68, 191) ;
 }
    
 ul a {
