--- a/Projekti/style.css
+++ b/Projekti/style.css
@@ -1,7 +1,7 @@
 body {
  background-color: #a244bf;
  margin: 8%;
- font-family: Georgia, 'Times New Roman', Times, serif
+ font-family: sans-serif
 }
    
 @media screen and (min-width: 480px ), (max-width: 1200px) {
